--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>2020 COUNTDOWN</title>
+        <title>New Year Countdown</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
         <script type="text/javascript" src="index.js"> </script>
     </head>
@@ -38,6 +38,9 @@
     </div>
     <script>
     startEverything();
+    </script>
+    </body>
+</html>;
     </script>
     </body>
 </html>
